--- a/Blinkdown Installer/Product.wxs
+++ b/Blinkdown Installer/Product.wxs
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-	<Product Id="*" Name="Blinkdown_Installer" Language="1033" Version="1.0.0.0" Manufacturer="" UpgradeCode="2365e89e-373a-4755-8dd2-2835e92ae055">
+	<Product Id="*" Name="Blinkdown" Language="1033" Version="0.0.1.0" Manufacturer="Garrett Klein" UpgradeCode="2365e89e-373a-4755-8dd2-2835e92ae055">
 		<Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
 
 		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
 		<MediaTemplate />
 
-		<Feature Id="ProductFeature" Title="Blinkdown_Installer" Level="1">
+		<Feature Id="ProductFeature" Title="Blinkdown" Level="1">
 			<ComponentGroupRef Id="ProductComponents" />
 		</Feature>
 	</Product>
@@ -14,17 +14,19 @@
 	<Fragment>
 		<Directory Id="TARGETDIR" Name="SourceDir">
 			<Directory Id="ProgramFilesFolder">
-				<Directory Id="INSTALLFOLDER" Name="Blinkdown_Installer" />
+				<Directory Id="INSTALLFOLDER" Name="Blinkdown" />
 			</Directory>
 		</Directory>
 	</Fragment>
 
 	<Fragment>
 		<ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
-			<!-- TODO: Remove the comments around this Component element and the ComponentRef below in order to add resources to this installer. -->
-			<!-- <Component Id="ProductComponent"> -->
-				<!-- TODO: Insert files, registry keys, and other resources here. -->
-			<!-- </Component> -->
+			 <Component Id="ProductComponent"> 
+         <File Source="$(var.Blinkdown.TargetPath)" />
+				 </Component>
+      <Component Id="CommonMark">
+        <File Source="$(var.Blinkdown.TargetDir)CommonMark.dll" />
+      </Component>
 		</ComponentGroup>
 	</Fragment>
 </Wix>
